# supergaussian_transformer

./: .gitignore  convert_s3dis_to_las.py  install.sh
configs/datamodule/semantic/: _features.yaml  dales_gmm.yaml  fractal_gmm.yaml
configs/experiment/semantic/: dales.yaml  dales_11g.yaml  fractal.yaml
dataset_inspection/: inspect_dataset.py
src/data/: cluster.py  data.py  nag.py
src/datamodules/: fractal.py
src/datasets/: __init__.py  base.py  fractal.py  fractal_config.py
src/models/components/: spt.py
src/transforms/: geometry.py  graph.py  partition.py  point.py
src/utils/: __init__.py  gaussian.py  histogram.py  neighbors.py
src/utils/cpp/: CMakeLists.txt  gaussian_mixture.cpp  gaussian_mixture.h  gaussian_mixture_bindings.cpp  plot_gmm_results.py  setup.py  test_gmm.cpp  test_gmm.py  test_hgmm.py
